--- a/package.json
+++ b/package.json
@@ -93,6 +93,7 @@
     "jsdom": "^26.1.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.4",
+    "tsx": "^4.20.3",
     "typescript": "^5.9.2",
     "vite": "^5.1.4",
     "vitest": "^3.2.4"
