--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -30,7 +30,6 @@ jobs:
           semgrep --config=auto \
             --json \
             --output=semgrep-results.json \
-            --metrics=off \
             --error \
             --severity=ERROR \
             --severity=WARNING \
@@ -94,6 +93,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+        
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20.x'
+          cache: 'npm'
+          
+      - name: Install dependencies
+        run: npm ci
         
       - name: Run Trivy vulnerability scanner in repo mode
         uses: aquasecurity/trivy-action@master
