--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
     "@typescript-eslint/parser": "^8.39.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "@vitest/coverage-v8": "^3.2.4",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.56.0",
     "eslint-plugin-react": "^7.33.2",
