--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -68,7 +68,12 @@ jobs:
         env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
-          args: --severity-threshold=medium --json-file-output=snyk-results.json
+          args: --severity-threshold=medium --json-file-output=snyk-results.json --sarif-file-output=snyk.sarif
+
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: snyk.sarif
           
       - name: Upload Snyk results
         if: always()
