--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,29 +1,36 @@
 {
   "ci": {
     "collect": {
-      "staticDistDir": "./dist",
-      "numberOfRuns": 3
+      "url": ["http://localhost:3000"],
+      "numberOfRuns": 3,
+      "settings": {
+        "chromeFlags": "--no-sandbox --disable-dev-shm-usage --disable-gpu --headless",
+        "throttling": {
+          "rttMs": 40,
+          "throughputKbps": 10240,
+          "cpuSlowdownMultiplier": 1
+        },
+        "skipAudits": ["uses-http2"],
+        "onlyCategories": ["performance", "accessibility", "best-practices", "seo"]
+      }
     },
     "assert": {
-      "preset": "lighthouse:recommended",
+      "preset": "lighthouse:no-pwa",
       "assertions": {
-        "categories:performance": ["error", { "minScore": 0.8 }],
-        "categories:accessibility": ["error", { "minScore": 0.9 }],
-        "categories:best-practices": ["error", { "minScore": 0.9 }],
-        "categories:seo": ["error", { "minScore": 0.9 }],
-        "first-contentful-paint": ["error", { "maxNumericValue": 2000 }],
-        "largest-contentful-paint": ["error", { "maxNumericValue": 2500 }],
-        "cumulative-layout-shift": ["error", { "maxNumericValue": 0.1 }],
-        "total-blocking-time": ["error", { "maxNumericValue": 300 }],
-        "max-potential-fid": ["error", { "maxNumericValue": 200 }],
-        "errors-in-console": ["error", { "minScore": 0 }],
-        "server-response-time": ["error", { "maxNumericValue": 500 }],
-        "interactive": ["error", { "maxNumericValue": 3500 }],
-        "uses-responsive-images": "warn",
-        "uses-optimized-images": "warn",
-        "uses-text-compression": "warn",
-        "uses-rel-preconnect": "warn",
-        "unused-javascript": ["warn", { "maxNumericValue": 200000 }]
+        "categories:performance": ["warn", { "minScore": 0.7 }],
+        "categories:accessibility": ["error", { "minScore": 0.85 }],
+        "categories:best-practices": ["warn", { "minScore": 0.85 }],
+        "categories:seo": ["warn", { "minScore": 0.85 }],
+        "first-contentful-paint": ["warn", { "maxNumericValue": 3000 }],
+        "largest-contentful-paint": ["warn", { "maxNumericValue": 4000 }],
+        "cumulative-layout-shift": ["warn", { "maxNumericValue": 0.1 }],
+        "total-blocking-time": ["warn", { "maxNumericValue": 500 }],
+        "interactive": ["warn", { "maxNumericValue": 5000 }],
+        "uses-responsive-images": "off",
+        "uses-optimized-images": "off",
+        "uses-text-compression": "off",
+        "uses-rel-preconnect": "off",
+        "unused-javascript": "off"
       }
     },
     "upload": {
