--- a/.github/workflows/performance.yml
+++ b/.github/workflows/performance.yml
@@ -155,8 +155,9 @@ jobs:
       - name: Check for console.log in production
         run: |
           echo "Checking for console.log statements in production code..."
-          if grep -r "console.log" src/ --exclude-dir=test --exclude-dir=tests --exclude="*.test.*" --exclude="*.spec.*"; then
+          if grep -r "console.log" src/ --exclude-dir=test --exclude-dir=tests --exclude="*.test.*" --exclude="*.spec.*" --exclude="captureActualOutputs.ts" | grep -v "^Binary file"; then
             echo "⚠️ Found console.log statements that should be removed"
+            exit 1
           else
             echo "✅ No console.log statements in production code"
           fi
