--- a/.github/workflows/sast.yml
+++ b/.github/workflows/sast.yml
@@ -34,6 +34,9 @@ jobs:
             --severity=ERROR \
             --severity=WARNING \
             --severity=INFO \
+            --exclude=dist \
+            --exclude=node_modules \
+            --exclude=coverage \
             .
         continue-on-error: true
 
@@ -46,6 +49,9 @@ jobs:
             --severity=ERROR \
             --severity=WARNING \
             --severity=INFO \
+            --exclude=dist \
+            --exclude=node_modules \
+            --exclude=coverage \
             .
         continue-on-error: true
         
